@@ -5,6 +5,8 @@ Changes in 1.4.2:
  o event_base_get_method; from Springande Ulv
  o Send CRLF after each chunk in HTTP output, for compliance with RFC2626.  Patch from "propanbutan".  Fixes bug 1894184.
  o Add a int64_t parsing function, with unit tests, so we can apply Scott Lamb's fix to allow large HTTP values.
+ o Use a 64-bit field to hold HTTP content-lengths.  Patch from Scott Lamb.
+
 
 Changes in 1.4.1-beta:
  o free minheap on event_base_free(); from Christopher Layne
